--- a/desafio/012/estilo/style.css
+++ b/desafio/012/estilo/style.css
@@ -1,1 +1,67 @@
 @charset "UTF-8";
+
+* {
+    margin: 0px; /* marge */
+    padding: 0px; /* distancia do texto até borda */
+}
+
+html, body {
+    min-height: 100vh; /* altura minima */
+    background-color: darkgray; /* cor de fundo */
+}
+
+header {
+    background-color: black; /* cor de fundo */
+    color: white; /* cor da letra */
+    text-align: center; /* alinhamento do texto */
+}
+
+header > h1 {
+    padding-top: 50px; 
+    font-variant: small-caps;
+    /* outra forma de deixar as letras maiuculas
+        text-transform: uppercase; */
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold; /* peso, negrito */
+}
+
+header a:hover, footer a:hover {
+    text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;    
+    padding-left: 30px;
+    line-height: 2em;
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(56, 55, 55);
+    color: white;
+}
+
+section.imagem > p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.233);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px;
+}
