--- a/desafio/012/estilo/style.css
+++ b/desafio/012/estilo/style.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+/* @import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=Borel&display=swap');
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Borel", cursive;
+    --fonte3: "Akaya Kanadaka", system-ui;
+}
+
 * {
     margin: 0px; /* marge */
     padding: 0px; /* distancia do texto até borda */
@@ -8,6 +20,7 @@
 html, body {
     min-height: 100vh; /* altura minima */
     background-color: darkgray; /* cor de fundo */
+    font-family: var(--fonte1);
 }
 
 header {
@@ -18,9 +31,8 @@ header {
 
 header > h1 {
     padding-top: 50px; 
-    font-variant: small-caps;
-    /* outra forma de deixar as letras maiuculas
-        text-transform: uppercase; */
+    font-variant: small-caps;/* outra forma de deixar as letras maiuculas; text-transform: uppercase; */
+    font-family: var(--fonte2);
 }
 
 header > p {
@@ -42,6 +54,7 @@ section {
     padding-bottom: 10vh;    
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
 }
 
 section.normal {
