--- a/desafio/012/estilo/style.css
+++ b/desafio/012/estilo/style.css
@@ -57,6 +57,10 @@ section {
     font-family: var(--fonte3);
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,11 +69,25 @@ section.normal {
 section.imagem {
     background-color: rgb(56, 55, 55);
     color: white;
+    box-shadow: inset 6px 6px  13px 0px rgba(0, 0, 0, 0.171);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     width: 400px;
-    background-color: rgba(0, 0, 0, 0.233);
+    background-color: rgba(0, 0, 0, 0.288);
+    text-shadow: 1px 2px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;  
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
 }
 
 footer {
